src/objects/Product_Adder_Junction__c.object
<CustomObject>
    <description>Some Community Programs require specific product adders</description>
    <fields>
        <fullName>Community_Program_Adder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community Program Adder</label>
        <referenceTo>Community_Program_Offer__c</referenceTo>
        <relationshipLabel>Product Adder Junctions</relationshipLabel>
        <relationshipName>Product_Adder_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financing_Product_Adder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financing Product Adder</label>
        <referenceTo>Lease_Fund__c</referenceTo>
        <relationshipLabel>Product Adder Junctions</relationshipLabel>
        <relationshipName>Product_Adder_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required_Entitlement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Required Entitlement</label>
        <referenceTo>Entitlement_Offer__c</referenceTo>
        <relationshipLabel>Product Adder Junctions</relationshipLabel>
        <relationshipName>Product_Adder_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Required Promotion</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipLabel>Product Adder Junctions</relationshipLabel>
        <relationshipName>Product_Adder_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required_System_Design_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Required System Design Product</label>
        <referenceTo>System_Design_Product__c</referenceTo>
        <relationshipLabel>Product Adder Junctions</relationshipLabel>
        <relationshipName>Product_Adder_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required?</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Adder Junction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ProdAdder-{00000}</displayFormat>
        <label>Product Adder Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Adder Junctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>